# FixedPointLib

./: CMakeLists.txt  MathParser.cpp  MathParser.h  fixed.h  main.cpp
Tests/: a.out  bcRes  test.sh  test.sh~  test2.sh  test2.sh~  test3.sh~
